# surf-project

./: create_superuser.py  db.sqlite3  manage.py  pyproject.toml
saas_project/: asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
saas_project/authentication/: forms.py  urls.py  views.py
saas_project/authentication/templates/authentication/: password_change.html  password_change_done.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
saas_project/templates/: base.html  dashboard.html  homepage.html  profile.html  transaction_management.html
transaction_mapper/: README.md  app.py  apps.py  chart_of_accounts.py  config.json  config_manager.py  decorators.py  forms.py  middleware.py  models.py  requirements.txt  signals.py  transaction_mapper.py  urls.py  views.py
transaction_mapper/management/commands/: create_admin.py  fix_user_role.py  setup_roles.py
transaction_mapper/migrations/: 0001_initial.py  0002_add_debit_credit_accounts.py
transaction_mapper/templates/: index.html
transaction_mapper/templates/transaction_mapper/: accounts.html  base.html  base_new.html  dashboard.html  profile.html  transactions.html
transaction_mapper/templates/transaction_mapper/auth/: login.html  profile.html  register.html
transaction_mapper/templates/transaction_mapper/users/: management.html  register.html
transaction_mapper/uploads/: Enhanced_Transaction_List_Complete.csv
transaction_mapper/views/: __init__.py  accounts.py  auth.py  dashboard.py  profile.py  transactions.py  users.py
