[tool.poetry]
name = "txmap"
version = "0.1.0"
description = "A Django-based Financial Transaction Mapping and Accounting System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^5.1.3"
uuid = "^1.30"
pandas = "^2.2.1"
numpy = "^1.26.4"
spacy = "3.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
